# Architecture

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  publish-docs.yml
about/: CHANGELOG.md  Getting Started.md  README.md  changelog.rs  mod.rs
benches/: sends.rs
composable-architecture/: Cargo.toml
composable-architecture/benches/: sends.rs
composable-architecture/src/: keyed.rs  lib.rs
composable-architecture/src/dependencies/: README.md  guard.rs  mod.rs  refs.rs  values.rs
composable-architecture/src/derive_macros/: mod.rs
composable-architecture/src/derive_macros/derive_reducers/: Cargo.toml
composable-architecture/src/derive_macros/derive_reducers/src/: enums.rs  lib.rs  structs.rs  util.rs
composable-architecture/src/effects/: README.md  delay.rs  mod.rs  scheduler.rs  task.rs
composable-architecture/src/reducer/: README.md  mod.rs
composable-architecture/src/store/: README.md  channel.rs  mod.rs  runtime.rs
composable-architecture/src/store/testing/: README.md  clock.rs  mod.rs
composable-architecture/tests/: keyed_recursive_reducer.rs  mixed_recursive_reducer.rs  recursive_reducer.rs
composable-views/: Cargo.toml
composable-views/benches/: font_parsing.rs
composable-views/examples/winit/: main.rs
composable-views/examples/winit/frames/: mod.rs
composable-views/examples/winit/ink/: grammer.rs  mod.rs
composable-views/examples/winit/script/: margin.rs  mod.rs
composable-views/examples/winit/settings/: mod.rs
composable-views/examples/winit/window/: menubar.rs  mod.rs
composable-views/src/: README.md  lib.rs
composable-views/src/gesture/: mod.rs  recognizer.rs  tap.rs
composable-views/src/layout/: mod.rs  spacing.rs
composable-views/src/modifiers/: fixed.rs  mod.rs  offset.rs  padding.rs
composable-views/src/output/: gpu.rs  mod.rs  svg.rs
composable-views/src/shapes/: bin.rs  mod.rs  rounded.rs
composable-views/src/shapes/snapshots/: README.md  composable_views__shapes__rounded__circle.snap  composable_views__shapes__rounded__continuous.snap  composable_views__shapes__rounded__ellipse.snap  composable_views__shapes__rounded__rectangle.snap  composable_views__shapes__rounded__rounded.snap
composable-views/src/text/: font.rs  mod.rs
composable-views/src/ui/: accessibility.rs  mod.rs  spacer.rs
composable-views/src/ui/colors/: gray.rs  mod.rs  theme.rs
composable-views/src/ui/font/: mod.rs
composable-views/src/ui/font/snapshots/: composable_views__ui__font__body text.snap
composable-views/src/ui/font/typography/: Typographic scale.md  mod.rs  scale.rs
composable-views/src/ui_id/src/: lib.rs
examples/winit/frames/: header.rs  mod.rs
examples/winit/window/: menubar.rs
src/: lib.rs
src/dependencies/: README.md
src/derive_macros/derive_reducers/src/: enums.rs  structs.rs
src/effects/: delay.rs  mod.rs  scheduler.rs
src/reducer/: README.md  mod.rs
src/store/: runtime.rs
src/store/testing/: clock.rs  mod.rs
src/views/gesture/: tap.rs
