[package]
name = "composable"
edition.workspace = true
version.workspace = true
license.workspace = true


[dependencies]
futures.workspace = true
pin-project = "1.1.5"

[dependencies.derive_reducers]
path = "src/derive_macros/derive_reducers"

[dependencies.derive_more]
version = "0.99.18"
features = ["from", "try_into"]
default-features = false


[dev-dependencies]
ntest_timeout.workspace = true
divan.workspace = true

[[bench]]
name = "sends"
harness = false
